# aoe3de-replay-rust

./: .gitignore  AoE3 Analyzer (Desktop).cmd  AoE3 Analyzer.cmd  Cargo.toml  LICENSE  README.md  analyze.cmd  analyze.ps1  app.ps1  desktop.ps1
data/: README.md  THIRD_PARTY_LICENSES.md  cards.json  civs.json  icons.json  techs.json  units.json
data/offsets/: aoe3de.json  template.json
docs/: game-data-layer.md  mode-b-live-capture.md  overlay-features.md  replay-format.md  roadmap.md  schema-v1.md
docs/reverse-engineering/: replay-model.md  shipments.md
src/: binary.rs  command.rs  constants.rs  deck.rs  fields.rs  gamedata.rs  import.rs  lib.rs  main.rs  models.rs  replay.rs  state.rs  team.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/mode_b/: config.rs  mod.rs  stub.rs  windows.rs
viewer/: index.html
