[package]
name = "aoe3de-replay-desktop"
version = "0.1.0"
description = "AoE3 DE replay analyzer desktop app"
edition = "2021"
rust-version = "1.77"

[lib]
name = "aoe3de_replay_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The existing CLI parser, reused as a library. ParsedOutput is Serialize, so the
# desktop backend turns a .age3Yrec straight into the viewer's JSON shape.
aoe3de-replay-rust = { path = ".." }

[features]
# This feature is used for production builds where `devUrl` is not used.
custom-protocol = ["tauri/custom-protocol"]
